--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url:  jdbc:mysql://localhost:3306/wolox_challenge?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
+    url:  jdbc:mysql://localhost:3306/wolox_challenge?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC #desktop
     #url:  jdbc:mysql://localhost:3306/wolox_challenge #notebook-ubuntu
     username: root
     password: 
@@ -8,8 +8,8 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
-      #naming:
-        #strategy: org.hibernate.cfg.ImprovedNaming.Strategy
+#      naming:
+#        strategy: org.hibernate.cfg.ImprovedNaming.Strategy #deprecated
     properties:
       dialect: org.hibernate.dialect.MySQL5Dialect    
         
