--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   datasource:
-    url:  jdbc:mysql://localhost:3306/wolox_challenge?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC #desktop
-    #url:  jdbc:mysql://localhost:3306/wolox_challenge #notebook-ubuntu
+    url:  jdbc:mysql://localhost:3306/wchallenge?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC #desktop
+    #url:  jdbc:mysql://localhost:3306/wchallenge #notebook-ubuntu
     username: root
     password: 
   jpa:
-    show-sql: true
+    show-sql: false
     hibernate:
       ddl-auto: update
 #      naming:
